--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,8 +7,20 @@
     "rules": {
         "indent": ["warn", 4],
         "quotes": ["warn", "single"],
-        "semi": ["warn", "always"]
-    },
+        "semi": ["warn", "always"],
+        "no-unused-vars": ["warn", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }],
+        "no-console": ["warn", { "allow": ["warn", "error"] }],
+        "arrow-body-style": ["warn", "as-needed"],
+        "camelcase": ["warn", { "properties": "always" }],
+        "no-unused-expressions": ["warn", { "allowShortCircuit": true, "allowTernary": true }],
+        "no-useless-escape": ["warn"],
+        "no-var": ["warn"],
+        "no-shadow": ["warn"],
+        "no-undef": ["warn"],
+        "no-use-before-define": ["warn"],
+        "no-useless-constructor": ["warn"],
+        "no-useless-return": ["warn"]
+        },
     "env": {
         "browser": true,
         "node": true,
