--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "homepage": "https://github.com/ZacharyEggert/diablo-inventory#readme",
     "dependencies": {
         "concurrently": "^6.2.1",
+        "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "if-env": "^1.0.4",
         "mongoose": "^6.0.8",
